tests/ui/methods/method-call-type-binding.rs
fn main() {
    0.clone::<T = u8>(); //~ ERROR associated item constraints are not allowed here
}

// ferrocene-annotations: fls_l21tjqjkkaa0
// Associated Items
